--- a/src/pages/not-found-screen/not-found-screen.module.css
+++ b/src/pages/not-found-screen/not-found-screen.module.css
@@ -7,13 +7,13 @@
 }
 
 .link {
-  padding: 9px 21px 6px 11px;
-  border: 1px solid #333;
+  padding: 16px 20px 13px;
   border-radius: 3px;
   color: #fff;
   background-color: #4481c3;
 }
 
+.link:focus,
 .link:hover {
-  text-shadow: 1px 0 0, .5px 0 0, -1px 0 0;
+  background-color: #3069a6;
 }
